# PytestBazel

rules_python/: .bazelrc  WORKSPACE
rules_python/exp_python/webapp/: BUILD.bazel  test.py
